muoni/GraalVM/language/tests/error/TypeError02.hn
fn main() {
  if ("4") { }  
}  
